# yarp-matlab-bindings

./: CMakeLists.txt  README.md  fix_generic_names_in_autogenerated_files.sh  yarp.i
.github/workflows/: conda-ci.yml  regenerate-matlab-bindings.yml
cmake/: FindMatlab.cmake
matlab/: CMakeLists.txt  yarpMATLAB_wrap.h  yarpsetup.m
matlab/+yarp/: AbstractContactable.m  BOTTLE_TAG_BLOB.m  BOTTLE_TAG_DICT.m  BOTTLE_TAG_DOUBLE.m  BOTTLE_TAG_INT.m  BOTTLE_TAG_INT64.m  BOTTLE_TAG_LIST.m  BOTTLE_TAG_STRING.m  BOTTLE_TAG_VOCAB.m  BVector.m  Bottle.m  BottleCallback.m  BufferedPortBottle.m  BufferedPortImageFloat.m  BufferedPortImageInt.m  BufferedPortImageMono.m  BufferedPortImageMono16.m  BufferedPortImageRgb.m  BufferedPortImageRgbFloat.m  BufferedPortImageRgba.m  BufferedPortProperty.m  BufferedPortSound.m  BufferedPortVector.m  CalibrationParameters.m  CartesianEvent.m  CartesianEventParameters.m  CartesianEventVariables.m  ConnectionReader.m  ConnectionWriter.m  Contact.m  ContactStyle.m  Contactable.m  DVector.m  DeprecatedDeviceDriver.m  DeviceDriver.m  DeviceResponder.m  DriverCreator.m  Drivers.m  DummyConnector.m  FORMAT_ANY.m  (+205 more)
matlab/autogenerated/: yarpMATLAB_wrap.h  yarpSwigGet.m  yarpSwigMem.m  yarpSwigRef.m  yarpSwigStorage.m
matlab/autogenerated/+yarp/: ALLUSERSPROFILE.m  APPDATA.m  AbstractContactable.m  BOTTLE_TAG_BLOB.m  BOTTLE_TAG_DICT.m  BOTTLE_TAG_DOUBLE.m  BOTTLE_TAG_FLOAT32.m  BOTTLE_TAG_FLOAT64.m  BOTTLE_TAG_INT.m  BOTTLE_TAG_INT16.m  BOTTLE_TAG_INT32.m  BOTTLE_TAG_INT64.m  BOTTLE_TAG_INT8.m  BOTTLE_TAG_LIST.m  BOTTLE_TAG_STRING.m  BOTTLE_TAG_VOCAB.m  BOTTLE_TAG_VOCAB32.m  BUS_FIREWIRE.m  BUS_UNKNOWN.m  BUS_USB.m  BVector.m  Bottle.m  BottleCallback.m  BufferedPortBottle.m  BufferedPortImageFloat.m  BufferedPortImageInt.m  BufferedPortImageMono.m  BufferedPortImageMono16.m  BufferedPortImageRgb.m  BufferedPortImageRgbFloat.m  BufferedPortImageRgba.m  BufferedPortProperty.m  BufferedPortSound.m  BufferedPortVector.m  BufferedPortVectorInt.m  CalibrationParameters.m  CameraDescriptor.m  CartesianEvent.m  CartesianEventParameters.m  CartesianEventVariables.m  (+638 more)
